if applied, this commit corrects spacing & font size erros on #home section

--- a/scss/Layouts/_mobile.scss
+++ b/scss/Layouts/_mobile.scss
@@ -8,11 +8,21 @@
 			flex-direction: column;
 		}
 	}
+
+	#content-wrapper {
+		.container {
+			max-width: 100% !important;
+		}
+	}
 }
 
 // Medium devices (tablets, less than 992px)
 @include media-breakpoint-down(md) {
-	//Custom Styles Here
+	#content-wrapper {
+		.container {
+			max-width: 80% !important;
+		}
+	}
 }
 
 // Large devices (desktops, less than 1200px)
@@ -30,12 +40,13 @@
 	#content-wrapper {
 		padding-top: $content-wrapper-top-padding;
 		#home {
-			.container {
-				//max-width: $content-wrapper-container-max-width-lg_down !important;
+			h1 {
+				margin-block: clamp(0.5rem, 1rem, 1.2rem);
+				font-size: 2rem;
 			}
 
-			h1 {
-				margin-block: clamp(0.5rem, 1rem, 1.2rem) !important;
+			h2 {
+				font-size: 1.5rem;
 			}
 		}
 	}
@@ -43,8 +54,20 @@
 
 // X-Large devices (large desktops, less than 1400px)
 @include media-breakpoint-down(xl) {
-	//Custom Styles HERE
+	#content-wrapper {
+		#home {
+			h1 {
+				font-size: 3rem;
+			}
+
+			h2 {
+				font-size: 2rem;
+			}
+		}
+	}
 }
+
+//////////////////////////////////////
 
 //Upwards
 /** No media query necessary for xs breakpoint as it's effectively `@media (min-width: 0) {**/
@@ -56,7 +79,7 @@
 
 // Medium devices (tablets, 768px and up)
 @include media-breakpoint-up(md) {
-	//here
+	//empty
 }
 
 // Large devices (desktops, 992px and up)
@@ -69,21 +92,15 @@
 	#content-wrapper {
 		padding-top: $content-wrapper-top-padding;
 		padding-left: $content-wrapper-left-padding;
-
-		#home {
-			.container {
-				//max-width: $content-wrapper-container-max-width-lg_up !important;
-			}
-		}
 	}
 }
 
 // X-Large devices (large desktops, 1200px and up)
 @include media-breakpoint-up(xl) {
-	//Custom Styles HERE
+	//empty
 }
 
 // XX-Large devices (larger desktops, 1400px and up)
 @include media-breakpoint-up(xxl) {
-	//Custom Styles HERE
+	//empty
 }
